--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -12,14 +12,13 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v2
         with:
-          node-version: 18
-      - name: setup workspace
-        run: cp .github/scripts/ci.package.json package.json
-      # Do this before yarn to avoid node_modules directory
-      - name: update tsconfigs for workspace
-        run: ./.github/scripts/copy-ts-config.sh
+          node-version: 16
       - run: yarn
-      - name: codegen
+      - name: Codegen
         run: yarn codegen
-      - name: build
+      - name: Build
         run: yarn build
+      - name: Install subql-node-cosmos
+        run: yarn global add @subql/node-cosmos
+      - name: Run tests with Subquery Node
+        run: subql-node-cosmos test -f ${{ github.workspace }}
