--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "dev": "subql codegen && subql build && docker-compose pull && docker-compose up --remove-orphans",
     "prepack": "rm -rf dist && npm run build",
     "test": "jest",
-    "subql": "subql codegen --help"
+    "subql": "subql codegen --help",
+    "prettier:check": "prettier --list-different . --print-width 120",
+    "prettier:write": "prettier --write . --print-width 120"
   },
   "homepage": "https://github.com/subquery/cosmos-subql-starter",
   "repository": "github:subquery/cosmos-subql-starter",
@@ -37,6 +39,7 @@
     "@subql/testing": "latest",
     "@types/jest": "^29.5.7",
     "jest": "^29.7.0",
+    "prettier": "^3.2.5",
     "ts-jest": "^29.1.2",
     "typescript": "^5.2.2"
   },
