--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,7 @@ services:
       - --db-schema=app
       - --workers=4
       - --batch-size=30
+      - --unsafe
       # - --log-level=debug
       # - --unfinalized-blocks=true
     healthcheck:
