--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "outDir": "dist",
     "rootDir": "src",
     "target": "es2017",
-    "strict": true
+    "strict": true,
+    "lib": ["es2021"]
   },
   "include": [
     "src/**/*",
