--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -1,8 +1,8 @@
 name: PR
-on:
-  pull_request:
-    paths-ignore:
-      - ".github/workflows/**"
+# on:
+#   pull_request:
+#     paths-ignore:
+#       - ".github/workflows/**"
 jobs:
   pr:
     name: pr
