--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
   "dependencies": {
     "@subql/types-cosmos": "^3.2.3",
     "@types/node": "^17.0.21",
+    "bech32": "^2.0.0",
+    "js-sha256": "^0.11.0",
     "pino": "^7.8.0",
     "ts-proto": "^1.112.1",
     "tslib": "^2.3.1"
