--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,6 @@
 node_modules/
 dist/
 
-# lock files
-yarn.lock
-package-lock.json
-
 # Compiled Java class files
 *.class
 
@@ -55,6 +51,14 @@ Thumbs.db
 *.wmv
 
 .data
-.yarn
 
 .DS_Store
+
+# Yarn (https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored)
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
