--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@subql/types-cosmos": "^4.0.0",
+    "@subql/utils": "^2.16.0",
     "@types/node": "^17.0.21",
     "bech32": "^2.0.0",
     "js-sha256": "^0.11.0",
