--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@cosmjs/stargate": "^0.28.9",
-    "@subql/cli": "^5.3.3",
+    "@subql/cli": "^5.4.0",
     "@subql/node-cosmos": "^4.2.1",
     "@subql/testing": "latest",
     "prettier": "^3.4.2",
@@ -33,13 +33,16 @@
   },
   "dependencies": {
     "@subql/types-cosmos": "^4.0.0",
-    "@subql/utils": "^2.16.0",
+    "@subql/utils": "^2.17.0",
     "@types/node": "^17.0.21",
     "bech32": "^2.0.0",
     "js-sha256": "^0.11.0",
     "pino": "^7.8.0",
     "ts-proto": "^1.112.1",
     "tslib": "^2.3.1"
+  },
+  "resolutions": {
+    "@subql/node-core": "^16.1.0"
   },
   "packageManager": "yarn@4.5.3"
 }
