--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "js-sha256": "^0.11.0",
     "pino": "^7.8.0"
   },
+  "resolutions": {
+    "@subql/node-core": "^16.1.0"
+  },
   "packageManager": "yarn@4.5.3"
 }
