--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -5,52 +5,31 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    services:
-      a3p:
-        image: ghcr.io/agoric/agoric-3-proposals:latest
-        ports:
-          - 26657:26657
-      postgres:
-        image: postgres:16-alpine
-        ports:
-          - 5432:5432
-        env:
-          POSTGRES_PASSWORD: postgres
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-    env:
-      DB_USER: postgres
-      DB_PASS: postgres
-      DB_DATABASE: postgres
-      DB_HOST: localhost
-      DB_PORT: 5432
     steps:
       - uses: actions/checkout@v4
       # Before setup-node because that action runs `yarn cache dir`. See https://github.com/actions/setup-node/issues/480#issuecomment-1915448139
       - run: corepack enable
         shell: bash
+
       - name: Setup Node.js environment
         uses: actions/setup-node@v4
         with:
           node-version: 18
           cache: yarn
+
       - run: yarn install
       - run: yarn prettier:check
-      - name: Codegen
-        run: yarn codegen
-      # After codegen because that makes src/types/
-      - run: yarn tsc
-      - name: Build
-        run: yarn build
-        env:
-          AGORIC_NET: local
 
-      # Runtime tests using the db
-      - name: Enable btree btree_gist
-        run: psql "postgresql://$DB_USER:$DB_PASS@$DB_HOST:$DB_PORT/$DB_DATABASE" -c "CREATE EXTENSION IF NOT EXISTS btree_gist;"
+      - name: Run Dev
+        run: |
+          yarn dev
+        env:
+          AGORIC_NET: docker
+
+      # # Runtime tests using the db
+      # - name: Enable btree btree_gist
+      #   run: psql "postgresql://$DB_USER:$DB_PASS@$DB_HOST:$DB_PORT/$DB_DATABASE" -c "CREATE EXTENSION IF NOT EXISTS btree_gist;"
+
       - name: Run tests with Subquery Node
         env:
           TZ: UTC # prevents: Environment Timezone is not set to UTC. This may cause issues with indexing or proof of index
