feat: index fastUsdc transactions

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "author": "Agoric OpCo",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@agoric/fast-usdc": "0.2.0-u18.0",
     "@agoric/inter-protocol": "0.17.0-u18.6",
     "@agoric/internal": "0.4.0-u18.1",
     "@agoric/smart-wallet": "0.5.4-u18.5",
