--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
   "author": "Agoric OpCo",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@agoric/internal": "0.4.0-u18.0",
     "@cosmjs/stargate": "^0.28.9",
     "@subql/cli": "^5.4.0",
-    "@subql/node-cosmos": "4.2.1",
+    "@subql/node-cosmos": "^4.2.1",
     "@subql/testing": "latest",
     "execa": "^9.5.2",
     "prettier": "^3.4.2",
