--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
   "devDependencies": {
     "@agoric/internal": "0.4.0-u18.0",
     "@cosmjs/stargate": "^0.28.9",
+    "@endo/eventual-send": "^1.2.8",
     "@subql/cli": "^5.4.0",
     "@subql/node-cosmos": "^4.2.1",
     "@subql/testing": "latest",
     "execa": "^9.5.2",
     "prettier": "^3.4.2",
+    "ses": "^1.10.0",
     "starknet": "6.11.0",
     "typescript": "^5.7.2"
   },
