--- a/.github/workflows/liquidation.yml
+++ b/.github/workflows/liquidation.yml
@@ -133,3 +133,12 @@ jobs:
         run: ./scripts/getActiveVaults.mjs
         env:
           expectedVaults: 7
+
+      - name: Notify About Failure
+        if: >
+          failure() && github.event_name != 'pull_request' &&
+          github.repository_owner == 'agoric'
+        uses: ./.github/actions/notify-status
+        with:
+          webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
+        continue-on-error: true
