--- a/.github/workflows/vaults-and-reserve-metrics-testing.yml
+++ b/.github/workflows/vaults-and-reserve-metrics-testing.yml
@@ -51,41 +51,41 @@ jobs:
       - name: Wait for GraphQL server
         run: sleep 60
 
-      - name: Test VaultManagerGovernance
-        run: ./scripts/validateData.mjs
-        env:
-          entity: vaultManagerGovernances
-          blockHeight: 1212
+      # - name: Test VaultManagerGovernance
+      #   run: ./scripts/validateData.mjs
+      #   env:
+      #     entity: vaultManagerGovernances
+      #     blockHeight: 1178
 
-      - name: Test VaultManagerMetrics
-        run: ./scripts/validateData.mjs
-        env:
-          entity: vaultManagerMetrics
-          blockHeight: 1212
+      # - name: Test VaultManagerMetrics
+      #   run: ./scripts/validateData.mjs
+      #   env:
+      #     entity: vaultManagerMetrics
+      #     blockHeight: 1170
 
       - name: Test VaultManagerMetricsDaily
         run: ./scripts/validateData.mjs
         env:
           entity: vaultManagerMetricsDailies
-          blockHeight: 1212
+          blockHeight: 1231
 
       - name: Test ReserveMetrics
         run: ./scripts/validateData.mjs
         env:
           entity: reserveMetrics
-          blockHeight: 1212
+          blockHeight: 1231
 
       - name: Test ReserveAllocationMetrics
         run: ./scripts/validateData.mjs
         env:
           entity: reserveAllocationMetrics
-          blockHeight: 1212
+          blockHeight: 1231
 
       - name: Test ReserveAllocationMetricsDaily
         run: ./scripts/validateData.mjs
         env:
           entity: reserveAllocationMetricsDailies
-          blockHeight: 1212
+          blockHeight: 1231
 
       - name: Notify About Failure
         if: >
