--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     services:
       a3p:
-        image: ghcr.io/agoric/agoric-3-proposals:use-upgrade-17
+        image: ghcr.io/agoric/agoric-3-proposals:use-upgrade-17@sha256:08d50e6db60b26c452c1f495205c72bdff64fbb10044db2bd4eb4a3f8b255c83
         ports:
           - 26657:26657
       postgres:
