--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "agoric-indexer",
+  "private": true,
   "version": "0.0.1",
   "description": "This is the SubQuery project for indexing the Agoric chain",
   "main": "dist/index.js",
@@ -8,7 +9,6 @@
     "codegen": "subql codegen",
     "start:docker": "docker-compose pull && docker-compose up --remove-orphans",
     "dev": "subql codegen && subql build && docker compose pull && docker compose --profile default up --remove-orphans --detach",
-    "prepack": "rm -rf dist && npm run build",
     "test": "subql build && subql-node-cosmos test",
     "prettier:check": "prettier --list-different . --print-width 120",
     "prettier:write": "prettier --write . --print-width 120"
