--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
   "devDependencies": {
     "@babel/preset-typescript": "^7.23.2",
     "@cosmjs/stargate": "^0.28.9",
-    "@subql/cli": "^4.2.6",
-    "@subql/node-cosmos": "^3.9.2",
+    "@subql/cli": "^5.4.0",
+    "@subql/node-cosmos": "4.2.1",
     "@subql/testing": "latest",
     "@types/jest": "^29.5.7",
     "jest": "^29.7.0",
