--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@agoric/fast-usdc": "0.1.1-dev-7186681.0",
     "@agoric/inter-protocol": "0.16.2-dev-7186681.0",
     "@agoric/internal": "0.3.3-dev-7186681.0",
-    "@agoric/smart-wallet": "0.5.4-dev-7186681.0",
+    "@agoric/smart-wallet": "patch:@agoric/smart-wallet@npm%3A0.5.4-dev-7186681.0#~/.yarn/patches/@agoric-smart-wallet-npm-0.5.4-dev-7186681.0-de3e51742e.patch",
     "@cosmjs/stargate": "^0.32.4",
     "@endo/eventual-send": "^1.2.8",
     "@subql/cli": "^5.6.0",
@@ -46,5 +46,8 @@
     "js-sha256": "^0.11.0",
     "pino": "^7.11.0"
   },
-  "packageManager": "yarn@4.6.0"
+  "packageManager": "yarn@4.6.0",
+  "resolutions": {
+    "@agoric/smart-wallet@npm:0.5.4-dev-7186681.0+7186681": "patch:@agoric/smart-wallet@npm%3A0.5.4-dev-7186681.0#~/.yarn/patches/@agoric-smart-wallet-npm-0.5.4-dev-7186681.0-de3e51742e.patch"
+  }
 }
