--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@agoric/cosmic-proto": "0.4.1-dev-7186681.0",
     "@subql/types-cosmos": "^4.1.0",
     "@subql/utils": "^2.18.0",
     "@types/node": "^17.0.45",
