--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "subql build",
-    "codegen": "subql codegen",
+    "codegen": "subql codegen && ./patches/patch-utf8.sh",
     "start:docker": "docker-compose pull && docker-compose up --remove-orphans",
-    "dev": "subql codegen && subql build && docker compose pull && docker compose --profile default up --remove-orphans --detach",
+    "dev": "npm run codegen && subql build && docker compose pull && docker compose --profile default up --remove-orphans --detach",
     "test": "subql build && subql-node-cosmos test",
     "prettier:check": "prettier --list-different . --print-width 120",
     "prettier:write": "prettier --write . --print-width 120"
