chore(deps): bump @agoric to dev latest

--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
   "author": "Agoric OpCo",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@agoric/fast-usdc": "0.1.1-dev-7186681.0",
-    "@agoric/inter-protocol": "0.16.2-dev-7186681.0",
-    "@agoric/internal": "0.3.3-dev-7186681.0",
-    "@agoric/smart-wallet": "patch:@agoric/smart-wallet@npm%3A0.5.4-dev-7186681.0#~/.yarn/patches/@agoric-smart-wallet-npm-0.5.4-dev-7186681.0-de3e51742e.patch",
+    "@agoric/fast-usdc": "dev",
+    "@agoric/inter-protocol": "dev",
+    "@agoric/internal": "dev",
+    "@agoric/smart-wallet": "dev",
     "@cosmjs/stargate": "^0.32.4",
     "@endo/eventual-send": "^1.2.8",
     "@subql/cli": "^5.7.0",
@@ -41,8 +41,8 @@
   },
   "dependencies": {
     "@agoric/cosmic-proto": "0.4.1-dev-7186681.0",
-    "@subql/types-cosmos": "^4.1.0",
-    "@subql/utils": "^2.18.0",
+    "@subql/types-cosmos": "^4.1.1",
+    "@subql/utils": "^2.18.1",
     "@types/node": "^17.0.45",
     "bech32": "^2.0.0",
     "js-sha256": "^0.11.0",
@@ -51,8 +51,6 @@
   },
   "packageManager": "yarn@4.9.1",
   "resolutions": {
-    "@agoric/smart-wallet@npm:0.5.4-dev-7186681.0+7186681": "patch:@agoric/smart-wallet@npm%3A0.5.4-dev-7186681.0#~/.yarn/patches/@agoric-smart-wallet-npm-0.5.4-dev-7186681.0-de3e51742e.patch",
-    "@subql/x-cosmology-telescope@npm:^1.4.14": "patch:@subql/x-cosmology-telescope@npm%3A1.4.14#~/.yarn/patches/@subql-x-cosmology-telescope-npm-1.4.14-f7014b8f33.patch",
-    "@agoric/orchestration@npm:0.1.1-dev-7186681.0+7186681": "patch:@agoric/orchestration@npm%3A0.1.1-dev-7186681.0#~/.yarn/patches/@agoric-orchestration-npm-0.1.1-dev-7186681.0-53a06224f4.patch"
+    "@subql/x-cosmology-telescope@npm:^1.4.14": "patch:@subql/x-cosmology-telescope@npm%3A1.4.14#~/.yarn/patches/@subql-x-cosmology-telescope-npm-1.4.14-f7014b8f33.patch"
   }
 }
