--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "@agoric/smart-wallet": "dev",
     "@cosmjs/stargate": "^0.32.4",
     "@endo/eventual-send": "^1.2.8",
-    "@subql/cli": "^5.7.0",
-    "@subql/node-cosmos": "^4.5.1",
-    "@subql/testing": "latest",
+    "@subql/cli": "~5.10.0",
+    "@subql/node-cosmos": "~5.0.3",
+    "@subql/testing": "~2.2.4",
     "@types/text-encoding": "^0",
     "execa": "^9.5.2",
     "prettier": "^3.4.2",
